// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/Team renders Team 1`] = `
<div>
  <div>
    <div
      class="sc-dqBHgY cGUgLT"
    >
      <div
        class="sc-gxMtzJ eXQJvD"
      >
        <div
          class="sc-btzYZH cZSewS"
        >
          <a
            class="sc-lhVmIH ikqhWa"
          >
            <img
              class="sc-bYSBpT dCPoBO"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-elJkPf kVhaog"
          >
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Om
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Drift & Support
            </a>
            <div
              class="sc-jtRfpW hwCVJp"
            />
          </div>
        </div>
        <div
          class="sc-dfVpRl hlzXex"
        >
          <h1
            class="sc-gzOgki gWEEDl"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-cvbbAY hJLgSh"
    >
      <div
        class="sc-brqgnP hNFZAy"
      >
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-kPVwWT bAZnwm"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iyvyFf hIGtnG"
          >
            Cookie M
          </div>
          <div
            class="sc-hwwEjo fMbrdn"
          >
            Cookie master
          </div>
          <div
            class="sc-kfGgVZ dejRES"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-kPVwWT bAZnwm"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iyvyFf hIGtnG"
          >
            Count van Count
          </div>
          <div
            class="sc-hwwEjo fMbrdn"
          >
            1 ahahah
          </div>
          <div
            class="sc-kfGgVZ dejRES"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using keyboard 1`] = `
<div>
  <div>
    <div
      class="sc-dqBHgY cGUgLT"
    >
      <div
        class="sc-gxMtzJ eXQJvD"
      >
        <div
          class="sc-btzYZH cZSewS"
        >
          <a
            class="sc-lhVmIH ikqhWa"
          >
            <img
              class="sc-bYSBpT dCPoBO"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-elJkPf kVhaog"
          >
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Om
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Drift & Support
            </a>
            <div
              class="sc-jtRfpW hwCVJp"
            />
          </div>
        </div>
        <div
          class="sc-dfVpRl hlzXex"
        >
          <h1
            class="sc-gzOgki gWEEDl"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-cvbbAY hJLgSh"
    >
      <div
        class="sc-brqgnP hNFZAy"
      >
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-kPVwWT bAZnwm"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iyvyFf hIGtnG"
          >
            Count van Count
          </div>
          <div
            class="sc-hwwEjo fMbrdn"
          >
            1 ahahah
          </div>
          <div
            class="sc-kfGgVZ dejRES"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should handle changing location using mouse 1`] = `
<div>
  <div>
    <div
      class="sc-dqBHgY cGUgLT"
    >
      <div
        class="sc-gxMtzJ eXQJvD"
      >
        <div
          class="sc-btzYZH cZSewS"
        >
          <a
            class="sc-lhVmIH ikqhWa"
          >
            <img
              class="sc-bYSBpT dCPoBO"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-elJkPf kVhaog"
          >
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Om
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Drift & Support
            </a>
            <div
              class="sc-jtRfpW hwCVJp"
            />
          </div>
        </div>
        <div
          class="sc-dfVpRl hlzXex"
        >
          <h1
            class="sc-gzOgki gWEEDl"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-cvbbAY hJLgSh"
    >
      <div
        class="sc-brqgnP hNFZAy"
      >
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-kPVwWT bAZnwm"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iyvyFf hIGtnG"
          >
            Cookie M
          </div>
          <div
            class="sc-hwwEjo fMbrdn"
          >
            Cookie master
          </div>
          <div
            class="sc-kfGgVZ dejRES"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/Team should not change using keyboard if not enter or space key 1`] = `
<div>
  <div>
    <div
      class="sc-dqBHgY cGUgLT"
    >
      <div
        class="sc-gxMtzJ eXQJvD"
      >
        <div
          class="sc-btzYZH cZSewS"
        >
          <a
            class="sc-lhVmIH ikqhWa"
          >
            <img
              class="sc-bYSBpT dCPoBO"
              data-testid="logo"
              path="test-file-stub"
            />
          </a>
          <div
            class="sc-elJkPf kVhaog"
          >
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Case
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              AI
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Metod
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Medarbetare
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Karriär
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Om
            </a>
            <a
              class="sc-kTUwUJ fEMxFB"
              aria-current="false"
            >
              Drift & Support
            </a>
            <div
              class="sc-jtRfpW hwCVJp"
            />
          </div>
        </div>
        <div
          class="sc-dfVpRl hlzXex"
        >
          <h1
            class="sc-gzOgki gWEEDl"
          >
            <span>
              Det är vi som är Iteam
            </span>
          </h1>
        </div>
      </div>
    </div>
  </div>
  <div
    class="sc-ifAKCX enKhVc"
  >
    <div
      class="sc-htpNat eTTkxF"
    >
      <div
        class="sc-bwzfXH kkDUXN"
        data-test="filter-"
        tabindex="0"
      >
        Alla
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Stockholm"
        tabindex="0"
      >
        Stockholm
      </div>
      <div
        class="sc-bwzfXH bJTJSt"
        data-test="filter-Göteborg"
        tabindex="0"
      >
        Göteborg
      </div>
    </div>
    <div
      class="sc-cvbbAY hJLgSh"
    >
      <div
        class="sc-brqgnP hNFZAy"
      >
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-kPVwWT bAZnwm"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Cookie M"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iyvyFf hIGtnG"
          >
            Cookie M
          </div>
          <div
            class="sc-hwwEjo fMbrdn"
          >
            Cookie master
          </div>
          <div
            class="sc-kfGgVZ dejRES"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0701234567"
            >
              070-123 45 67
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:cm@sesame.com"
          >
            cm@sesame.com
          </a>
        </div>
        <div
          class="sc-ckVGcZ goMkEY"
        >
          <a
            class="sc-kpOJdX eNhRjC"
          >
            <div
              class="sc-kPVwWT bAZnwm"
            >
              <div>
                <img
                  class="sc-dxgOiQ hjYxNe"
                  alt="Count van Count"
                  src=""
                />
              </div>
            </div>
          </a>
          <div
            class="sc-iyvyFf hIGtnG"
          >
            Count van Count
          </div>
          <div
            class="sc-hwwEjo fMbrdn"
          >
            1 ahahah
          </div>
          <div
            class="sc-kfGgVZ dejRES"
          >
            <a
              class="sc-chPdSV hAACpH"
              href="tel:0707654321"
            >
              070-765 43 21
            </a>
          </div>
          <a
            class="sc-kAzzGY LovkB"
            href="mailto:count@sesame.com"
          >
            count@sesame.com
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;
